--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 title: IEEE Student Branch CMRCET
-description: Enlight Yourself 
+description: Enlight Yourself
 #show_downloads: true
 
 baseurl: "" # change this to the subpath of your site, e.g. /blog. Leave it empty if you don't need it.
-url: "https://lorepirri.github.io" # change this to the base hostname & protocol for your site
+#url: "https://lorepirri.github.io" # change this to the base hostname & protocol for your site
 
 google_analytics:
 # cayman-blog date format
